--- a/org.scala-ide.sdt.update-site/pom.xml
+++ b/org.scala-ide.sdt.update-site/pom.xml
@@ -10,4 +10,40 @@
   </parent>
   <artifactId>org.scala-ide.sdt.update-site</artifactId>
   <packaging>eclipse-update-site</packaging>
+  
+  <build>
+    <plugins>
+      <plugin>
+        <!--
+          xml-maven-plugin is an alternative, but as we need to transform file inplace(or from content.jar)
+          it's ease to use ant tasks
+          http://mojo.codehaus.org/xml-maven-plugin/
+        -->
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <version>1.4</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <configuration>
+              <tasks>
+                <echo message="add support of previous NatureId, ContainerId,..."/>
+                <property name="content_dir" location="${project.build.directory}/content"/>
+                <property name="content_jar" location="${project.build.directory}/site/content.jar"/>
+                <mkdir dir="${content_dir}"/>
+                <unzip src="${content_jar}" dest="${content_dir}"/>
+                <xslt in="${content_dir}/content.xml" out="${content_dir}/content.xml.new" style="${basedir}/obsoletes.xslt"/>
+                <move file="${content_dir}/content.xml.new" tofile="${content_dir}/content.xml"/>
+                <zip destfile="${content_jar}" basedir="${content_dir}"/>
+              </tasks>
+            </configuration>
+            <goals>
+              <goal>run</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+  
 </project>
