--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -398,9 +398,10 @@
         </menu>
       <visibility>
         <and>
-          <objectState
-            name="projectNature"
-            value="org.scala-ide.sdt.core.scalanature"/>
+          <or>
+            <objectState name="projectNature" value="org.scala-ide.sdt.core.scalanature"/>
+            <objectState name="projectNature" value="ch.epfl.lamp.sdt.core.scalanature"/>
+          </or>
           <or>
             <objectClass name="org.eclipse.jdt.core.IJavaProject"/>
             <objectClass name="org.eclipse.jdt.core.IPackageFragment"/>
@@ -422,9 +423,10 @@
 
       <visibility>
         <and>
-          <objectState
-            name="projectNature"
-            value="org.scala-ide.sdt.core.scalanature"/>
+          <or>
+            <objectState name="projectNature" value="org.scala-ide.sdt.core.scalanature"/>
+            <objectState name="projectNature" value="ch.epfl.lamp.sdt.core.scalanature"/>
+          </or>
           <or>
             <objectClass name="org.eclipse.jdt.core.IJavaProject"/>
             <objectClass name="org.eclipse.jdt.core.IPackageFragment"/>
@@ -449,13 +451,14 @@
          </action>
          <visibility>
            <and>
-          <objectState name="projectNature" value="org.scala-ide.sdt.core.scalanature"/>
+             <or>
+               <objectState name="projectNature" value="org.scala-ide.sdt.core.scalanature"/>
+               <objectState name="projectNature" value="ch.epfl.lamp.sdt.core.scalanature"/>
+             </or>
              <objectClass name="org.eclipse.jdt.core.IJavaProject"/>
            </and>
          </visibility>
     </objectContribution>
-
-      
       
       <objectContribution
             adaptable="true"
@@ -474,7 +477,10 @@
          <visibility>
             <and>
             <not>
-              <objectState name="projectNature" value="org.scala-ide.sdt.core.scalanature"/>
+              <or>
+                <objectState name="projectNature" value="org.scala-ide.sdt.core.scalanature"/>
+                <objectState name="projectNature" value="ch.epfl.lamp.sdt.core.scalanature"/>
+              </or>
             </not>
             <objectClass name="org.eclipse.jdt.core.IJavaProject"/>
           </and>
@@ -584,7 +590,10 @@
         <enablement>
           <with variable="projectNatures">
              <iterate operator="or">
-                <equals value="org.scala-ide.sdt.core.scalanature"/>
+                <or>
+                  <equals value="org.scala-ide.sdt.core.scalanature"/>
+                  <equals value="ch.epfl.lamp.sdt.core.scalanature"/>
+                </or>
              </iterate>
           </with>
         </enablement>
