Integrate Scalariform as formatter

--- a/org.scala-ide.sdt.aspects/plugin.xml
+++ b/org.scala-ide.sdt.aspects/plugin.xml
@@ -3,4 +3,5 @@
 <plugin>
    <extension-point id="cfprovider" name="ClassFile Provider" schema="cfprovider.exsd"/>
    <extension-point id="indexerprovider" name="Indexer Provider" schema="indexerprovider.exsd"/>
+   <extension-point id="formatterCleanUp" name="Formatter Clean Up" schema="formatterCleanUp.exsd"/>
 </plugin>
