--- a/org.scala-ide.build/pom.xml
+++ b/org.scala-ide.build/pom.xml
@@ -11,7 +11,7 @@
   <properties>
     <scala.toolchain.version>2.8.0-RC6</scala.toolchain.version>
     <scala.version>2.8.0.RC6</scala.version>
-    <tycho.version>0.9.0-SNAPSHOT</tycho.version>
+    <tycho.version>0.9.0</tycho.version>
     <maven.compiler.source>1.5</maven.compiler.source>
     <maven.compiler.target>1.5</maven.compiler.target>
     <encoding>UTF-8</encoding>
@@ -41,11 +41,17 @@
       <version>${scala.toolchain.version}</version>
     </dependency>
   </dependencies>
+  
   <build>
     <sourceDirectory>${basedir}/src</sourceDirectory>
     <testSourceDirectory>${basedir}/test</testSourceDirectory>
     <pluginManagement>
       <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-clean-plugin</artifactId>
+          <version>2.4.1</version>
+        </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-resources-plugin</artifactId>
@@ -89,6 +95,7 @@
       <name>JDT Weaving p2 repository</name>
       <layout>p2</layout>
       <url>http://download.scala-ide.org/jdt-weaving</url>
+      <!--url>http://download.eclipse.org/tools/ajdt/35/update</url-->
       <snapshots><enabled>false</enabled></snapshots>
     </repository>
     <repository>
