--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -25,13 +25,13 @@
             category="org.scala-ide.sdt.core.preferences"
             class="scala.tools.eclipse.properties.CompilerSettings"
             id="org.scala-ide.sdt.core.preferences.CompilerPreferences"
-            name="Scala Compiler Preferences">
+            name="Compiler">
       </page>
       <page
             category="org.scala-ide.sdt.core.preferences"
             class="scala.tools.eclipse.formatter.FormatterPreferencePage"
             id="scala.tools.eclipse.formatter.FormatterPreferencePage"
-            name="Scala Formatter Preferences">
+            name="Formatter">
       </page>
       <page
             category="org.scala-ide.sdt.core.preferences"
