template : replace override of getContentAssistant by using the extension point javaCompletionProposalComputer (from jdt) to avoid interference with other ContentAssistant (customized via aspect)

--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -766,4 +766,14 @@
         file="templates/default-templates.xml">
     </include>
   </extension>
+  
+ <extension point="org.eclipse.jdt.ui.javaCompletionProposalComputer"
+   id="scala.tools.eclipse.TemplateCompletionProposalComputer"
+   name="Template Completion Proposal Computer">
+   <javaCompletionProposalComputer
+      class="scala.tools.eclipse.templates.TemplateCompletionProposalComputer"
+      categoryId="org.eclipse.jdt.ui.templateProposalCategory">
+      <partition type="__dftl_partition_content_type"/>
+   </javaCompletionProposalComputer>
+ </extension>
 </plugin>
