--- a/org.scala-ide.sdt.core/build.properties
+++ b/org.scala-ide.sdt.core/build.properties
@@ -1,10 +1,10 @@
 source.. = src/
-output.. = bin/
-bin.includes = \
-META-INF/,\
-.,\
-compiler-plugins/,\
-docs/,\
-icons/,\
-plugin.xml,\
-toc.xml
+output.. = target/classes/
+bin.includes = META-INF/,\
+	.,\
+	compiler-plugins/,\
+	docs/,\
+	icons/,\
+	plugin.xml,\
+    toc.xml,\
+    templates/
