Use a key binding scope to avoid conflicts between Java & Scala refactoring actions

--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -728,19 +728,30 @@
          name="Show References"/>
 </extension>
 
+   <extension point="org.eclipse.ui.contexts">
+          <context name="scala.tools.eclipse.scalaEditorScope"
+           description="Scala source file editor"
+           parentId="org.eclipse.ui.textEditorScope"
+           id="scala.tools.eclipse.scalaEditorScope" />
+   </extension>
+
+
 <extension
       point="org.eclipse.ui.bindings"> <!-- M1 == Ctrl, M2 == Shift M3 == Alt -->
    <key
    		 commandId="scala.tools.eclipse.refactoring.command.ExtractMethod"
    		 schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
+   		 contextId="scala.tools.eclipse.scalaEditorScope"
    		 sequence="M2+M3+E"/>
    <key
    		 commandId="scala.tools.eclipse.refactoring.command.ExtractLocal"
    		 schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
+   		 contextId="scala.tools.eclipse.scalaEditorScope"
    		 sequence="M2+M3+L"/>
    <key
    		 commandId="scala.tools.eclipse.refactoring.command.Rename"
    		 schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
+   		 contextId="scala.tools.eclipse.scalaEditorScope"
    		 sequence="M2+M3+R"/>
 
    </extension>
