Add some help contents for the Scala refactorings. Also link them with the UI wizards.

--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -385,6 +385,12 @@
       <toc file="toc.xml"
            primary="true"/>
    </extension>
+   <extension
+         point="org.eclipse.help.contexts">
+         <contexts
+         	file="docs/contexts.xml">
+         </contexts>
+   </extension>   
 
   <extension
     id="javaelementfilters"
