Distinguish a Scala multiline string partition type -- fix for behaviour when pressing return in a multiline string literal (closes #2469).

--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -600,6 +600,10 @@
     <provider class="scala.tools.eclipse.ScalaSourceIndexerFactory" />
   </extension>
 
+  <extension point="org.scala-ide.sdt.aspects.spellingengineprovider">
+    <provider class="scala.tools.eclipse.ScalaSpellingEngineProvider" />
+  </extension> 
+
   <extension point="org.scala-ide.sdt.aspects.formatterCleanUp">
     <provider class="scala.tools.eclipse.formatter.ScalaFormatterCleanUpProvider" />
   </extension>
