--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -778,6 +778,7 @@
    <key
    		 commandId="scala.tools.eclipse.refactoring.command.InlineLocal"
    		 schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
+   		 contextId="scala.tools.eclipse.scalaEditorScope"
    		 sequence="M2+M3+I"/>
    <key
    		 commandId="scala.tools.eclipse.refactoring.command.Rename"
