--- a/org.scala-ide.build/pom.xml
+++ b/org.scala-ide.build/pom.xml
@@ -9,8 +9,8 @@
   <packaging>pom</packaging>
 
   <properties>
-    <scala.toolchain.version>2.8.0-RC6</scala.toolchain.version>
-    <scala.version>2.8.0.RC6</scala.version>
+    <scala.toolchain.version>2.8.0</scala.toolchain.version>
+    <scala.version>2.8.0</scala.version>
     <tycho.version>0.9.0</tycho.version>
     <maven.compiler.source>1.5</maven.compiler.source>
     <maven.compiler.target>1.5</maven.compiler.target>
