--- a/ch.epfl.lamp.sdt/pom.xml
+++ b/ch.epfl.lamp.sdt/pom.xml
@@ -8,6 +8,7 @@
     <version>1.0.0-SNAPSHOT</version>
     <relativePath>../org.scala-ide.build/pom.xml</relativePath>
   </parent>
-  <artifactId>org.scala-ide.sdt.update-site</artifactId>
-  <packaging>eclipse-update-site</packaging>
+  <artifactId>ch.epfl.lamp.sdt</artifactId>
+  <version>2.8.0.scala-ide-upgrade</version>
+  <packaging>eclipse-feature</packaging>
 </project>
