--- a/org.eclipse.contribution.weaving/pom.xml
+++ b/org.eclipse.contribution.weaving/pom.xml
@@ -8,6 +8,7 @@
     <version>1.0.0-SNAPSHOT</version>
     <relativePath>../org.scala-ide.build/pom.xml</relativePath>
   </parent>
-  <artifactId>org.scala-ide.sdt.update-site</artifactId>
-  <packaging>eclipse-update-site</packaging>
+  <artifactId>org.eclipse.contribution.weaving</artifactId>
+  <version>1.6.4.scala-ide-upgrade</version>
+  <packaging>eclipse-feature</packaging>
 </project>
