--- a/org.scala-ide.build/pom.xml
+++ b/org.scala-ide.build/pom.xml
@@ -64,14 +64,6 @@
           <artifactId>maven-dependency-plugin</artifactId>
           <version>2.1</version>
         </plugin>
-        <plugin>
-          <groupId>org.sonatype.tycho</groupId>
-          <artifactId>maven-osgi-packaging-plugin</artifactId>
-          <version>${tycho.version}</version>
-          <configuration>
-            <target>${project.build.directory}/${update-site.name}</target>
-          </configuration>
-        </plugin>
       </plugins>
     </pluginManagement>
     <plugins>
@@ -93,14 +85,6 @@
     </plugins>
   </build>
   <repositories>
-    <repository>
-      <id>jdt-weaving</id>
-      <name>JDT Weaving p2 repository</name>
-      <layout>p2</layout>
-      <url>http://download.scala-ide.org/jdt-weaving</url>
-      <!--url>http://download.eclipse.org/tools/ajdt/35/update</url-->
-      <snapshots><enabled>false</enabled></snapshots>
-    </repository>
     <repository>
       <id>scala-refactoring</id>
       <name>Scala Refactoring p2 repository</name>
@@ -152,29 +136,38 @@
       <activation>
         <activeByDefault>true</activeByDefault>
       </activation>
-      <properties>
-        <!--update-site.name>site-galileo</update-site.name-->
-        <update-site.name>site</update-site.name>
-      </properties>
       <repositories>
         <repository>
           <id>galileo</id>
-          <url>http://download.eclipse.org/releases/galileo/</url>
+          <name>Eclipse Galileo p2 repository</name>
           <layout>p2</layout>
+          <url>http://download.eclipse.org/releases/galileo/</url>
+          <snapshots><enabled>false</enabled></snapshots>
+        </repository>
+        <repository>
+          <id>ajdt-galileo</id>
+          <name>AJDT for Eclipse Galileo p2 repository</name>
+          <layout>p2</layout>
+          <url>http://download.eclipse.org/tools/ajdt/35/update</url>
           <snapshots><enabled>false</enabled></snapshots>
         </repository>
       </repositories>
     </profile>
     <profile>
       <id>helios</id>
-      <properties>
-        <update-site.name>site-helios</update-site.name>
-      </properties>
       <repositories>
         <repository>
           <id>helios</id>
-          <url>http://download.eclipse.org/releases/helios/</url>
+          <name>Eclipse Helios p2 repository</name>
           <layout>p2</layout>
+          <url>http://download.eclipse.org/releases/helios/</url>
+          <snapshots><enabled>false</enabled></snapshots>
+        </repository>
+        <repository>
+          <id>ajdt-helios</id>
+          <name>AJDT for Eclipse Helios p2 repository</name>
+          <layout>p2</layout>
+          <url>http://download.eclipse.org/tools/ajdt/36/update</url>
           <snapshots><enabled>false</enabled></snapshots>
         </repository>
       </repositories>
