--- a/org.scala-ide.build/pom.xml
+++ b/org.scala-ide.build/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.scala-ide</groupId>
   <artifactId>scala-ide-for-eclipse</artifactId>
@@ -9,18 +9,17 @@
   <packaging>pom</packaging>
 
   <properties>
-    <scala.toolchain.version>2.8.0</scala.toolchain.version>
     <scala.version>2.8.0</scala.version>
     <tycho.version>0.9.0</tycho.version>
     <maven.compiler.source>1.5</maven.compiler.source>
     <maven.compiler.target>1.5</maven.compiler.target>
     <encoding>UTF-8</encoding>
   </properties>
-  
+
   <prerequisites>
     <maven>3.0</maven>
   </prerequisites>
-  
+
   <modules>
     <module>../ch.epfl.lamp.sdt</module>
     <module>../org.eclipse.contribution.weaving</module>
@@ -31,19 +30,6 @@
     <module>../org.scala-ide.sdt.update-site</module>
   </modules>
 
-  <dependencies>
-    <dependency>
-      <groupId>org.scala-ide</groupId>
-      <artifactId>org.scala-ide.scala.library</artifactId>
-      <version>${scala.toolchain.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.scala-ide</groupId>
-      <artifactId>org.scala-ide.scala.compiler</artifactId>
-      <version>${scala.toolchain.version}</version>
-    </dependency>
-  </dependencies>
-  
   <build>
     <sourceDirectory>${basedir}/src</sourceDirectory>
     <testSourceDirectory>${basedir}/test</testSourceDirectory>
@@ -100,19 +86,6 @@
       <snapshots><enabled>false</enabled></snapshots>
     </repository>
     <repository>
-      <id>scala-refactoring</id>
-      <name>Scala Refactoring p2 repository</name>
-      <layout>p2</layout>
-      <url>http://download.scala-ide.org/scala-refactoring</url>
-      <snapshots><enabled>false</enabled></snapshots>
-    </repository>
-    <repository>
-      <id>scalariform</id>
-      <name>Scalariform's p2 repo</name>
-      <layout>p2</layout>
-      <url>http://download.scala-ide.org/scalariform</url>
-    </repository>
-    <repository>
       <id>scala-tools.release</id>
       <name>Scala Tools maven release repository</name>
       <url>http://scala-tools.org/repo-releases</url>
@@ -142,5 +115,72 @@
       <url>http://scala-tools.org/repo-releases</url>
       <snapshots><enabled>false</enabled></snapshots>
     </pluginRepository>
+    <pluginRepository>
+      <id>scala-tools.snapshot</id>
+      <name>Scala Tools maven snapshot repository</name>
+      <url>http://scala-tools.org/repo-snapshots</url>
+    </pluginRepository>
   </pluginRepositories>
+  <profiles>
+    <profile>
+      <id>scala-2.8.0.final</id>
+      <activation>
+        <property>
+          <name>scala.version</name>
+          <value>2.8.0</value>
+        </property>
+      </activation>
+      <repositories>
+        <repository>
+          <id>scala-refactoring-2.8.0.final</id>
+          <name>Scala Refactoring Scala 2.8.0.final p2 repository</name>
+          <layout>p2</layout>
+          <url>http://download.scala-ide.org/scala-refactoring-2.8.0.final</url>
+          <snapshots><enabled>false</enabled></snapshots>
+        </repository>
+        <repository>
+          <id>scalariform-2.8.0.final</id>
+          <name>Scalariform Scala 2.8.0.final p2 repo</name>
+          <layout>p2</layout>
+          <url>http://download.scala-ide.org/scalariform-2.8.0.final</url>
+        </repository>
+        <repository>
+          <id>scala-toolchain-2.8.0.final</id>
+          <name>Scala Toolchain 2.8.0.final p2 repository</name>
+          <layout>p2</layout>
+          <url>http://download.scala-ide.org/scala-eclipse-toolchain-osgi-2.8.0.final</url>
+        </repository>
+      </repositories>
+    </profile>
+    <profile>
+      <id>scala-2.8.0.trunk</id>
+      <activation>
+        <property>
+          <name>scala.version</name>
+          <value>2.8.0-SNAPSHOT</value>
+        </property>
+      </activation>
+      <repositories>
+        <repository>
+          <id>scala-refactoring-trunk</id>
+          <name>Scala Refactoring Scala trunk p2 repository</name>
+          <layout>p2</layout>
+          <url>http://download.scala-ide.org/scala-refactoring-trunk</url>
+          <snapshots><enabled>false</enabled></snapshots>
+        </repository>
+        <repository>
+          <id>scalariform-trunk</id>
+          <name>Scalariform Scala trunk p2 repo</name>
+          <layout>p2</layout>
+          <url>http://download.scala-ide.org/scalariform-trunk</url>
+        </repository>
+        <repository>
+          <id>scala-toolchain-trunk</id>
+          <name>Scala Toolchain trunk p2 repository</name>
+          <layout>p2</layout>
+          <url>http://download.scala-ide.org/scala-eclipse-toolchain-osgi-trunk</url>
+        </repository>
+      </repositories>
+    </profile>
+  </profiles>
 </project>
