--- a/org.scala-ide.build/pom.xml
+++ b/org.scala-ide.build/pom.xml
@@ -218,5 +218,41 @@
         </repository>
       </repositories>
     </profile>
+    <profile>
+      <id>local-scala-2.8.0.trunk</id>
+      <activation>
+        <property>
+          <name>scala.version</name>
+          <value>2.8.0-SNAPSHOT</value>
+        </property>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>org.scala-ide</groupId>
+          <artifactId>org.scala-ide.scala.library</artifactId>
+          <version>${scala.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.scala-ide</groupId>
+          <artifactId>org.scala-ide.scala.compiler</artifactId>
+          <version>${scala.version}</version>
+        </dependency>
+      </dependencies>
+      <repositories>
+        <repository>
+          <id>scala-refactoring-trunk</id>
+          <name>Scala Refactoring Scala trunk p2 repository</name>
+          <layout>p2</layout>
+          <url>http://download.scala-ide.org/scala-refactoring-trunk</url>
+          <snapshots><enabled>false</enabled></snapshots>
+        </repository>
+        <repository>
+          <id>scalariform-trunk</id>
+          <name>Scalariform Scala trunk p2 repo</name>
+          <layout>p2</layout>
+          <url>http://download.scala-ide.org/scalariform-trunk</url>
+        </repository>
+      </repositories>
+    </profile>
   </profiles>
 </project>
