--- a/org.scala-ide.build/pom.xml
+++ b/org.scala-ide.build/pom.xml
@@ -141,7 +141,7 @@
   </pluginRepositories>
   <profiles>
     <profile>
-      <id>scala-2.8.0.final</id>
+      <id>scala-2.8.0</id>
       <activation>
         <property>
           <name>scala.version</name>
@@ -171,7 +171,7 @@
       </repositories>
     </profile>
     <profile>
-      <id>scala-2.8.1.trunk</id>
+      <id>scala-2.8.1</id>
       <activation>
         <property>
           <name>scala.version</name>
@@ -180,11 +180,39 @@
       </activation>
       <repositories>
         <repository>
+          <id>scala-refactoring-2.8.1.alpha</id>
+          <name>Scala Refactoring Scala 2.8.1.alpha p2 repository</name>
+          <layout>p2</layout>
+          <url>http://download.scala-ide.org/scala-refactoring-2.8.1.alpha</url>
+        </repository>
+        <repository>
+          <id>scalariform-2.8.1.alpha</id>
+          <name>Scalariform Scala 2.8.1.alpha p2 repo</name>
+          <layout>p2</layout>
+          <url>http://download.scala-ide.org/scalariform-2.8.1.final</url>
+        </repository>
+        <repository>
+          <id>scala-toolchain-2.8.1.alpha</id>
+          <name>Scala Toolchain 2.8.1.alpha p2 repository</name>
+          <layout>p2</layout>
+          <url>http://download.scala-ide.org/scala-eclipse-toolchain-osgi-2.8.1.alpha</url>
+        </repository>
+      </repositories>
+    </profile>
+    <profile>
+      <id>scala-trunk</id>
+      <activation>
+        <property>
+          <name>scala.version</name>
+          <value>2.9.0-SNAPSHOT</value>
+        </property>
+      </activation>
+      <repositories>
+        <repository>
           <id>scala-refactoring-trunk</id>
           <name>Scala Refactoring Scala trunk p2 repository</name>
           <layout>p2</layout>
           <url>http://download.scala-ide.org/scala-refactoring-trunk</url>
-          <snapshots><enabled>false</enabled></snapshots>
         </repository>
         <repository>
           <id>scalariform-trunk</id>
@@ -201,7 +229,7 @@
       </repositories>
     </profile>
     <profile>
-      <id>local-scala-2.8.0.final</id>
+      <id>local-scala-2.8.0</id>
       <dependencies>
         <dependency>
           <groupId>org.scala-ide</groupId>
@@ -231,7 +259,37 @@
       </repositories>
     </profile>
     <profile>
-      <id>local-scala-2.8.1.trunk</id>
+      <id>local-scala-2.8.1</id>
+      <dependencies>
+        <dependency>
+          <groupId>org.scala-ide</groupId>
+          <artifactId>org.scala-ide.scala.library</artifactId>
+          <version>${scala.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.scala-ide</groupId>
+          <artifactId>org.scala-ide.scala.compiler</artifactId>
+          <version>${scala.version}</version>
+        </dependency>
+      </dependencies>
+      <repositories>
+        <repository>
+          <id>scala-refactoring-2.8.1.alpha</id>
+          <name>Scala Refactoring Scala 2.8.1.alpha p2 repository</name>
+          <layout>p2</layout>
+          <url>http://download.scala-ide.org/scala-refactoring-2.8.1.alpha</url>
+          <snapshots><enabled>false</enabled></snapshots>
+        </repository>
+        <repository>
+          <id>scalariform-2.8.1.alpha</id>
+          <name>Scalariform Scala 2.8.1.alpha p2 repo</name>
+          <layout>p2</layout>
+          <url>http://download.scala-ide.org/scalariform-2.8.1.alpha</url>
+        </repository>
+      </repositories>
+    </profile>
+    <profile>
+      <id>local-scala-trunk</id>
       <dependencies>
         <dependency>
           <groupId>org.scala-ide</groupId>
