Updates to support building relative to 2.8.0.RC1.

--- a/org.scala-ide.build/pom.xml
+++ b/org.scala-ide.build/pom.xml
@@ -171,6 +171,36 @@
       </repositories>
     </profile>
     <profile>
+      <id>scala-2.8.1.RC1</id>
+      <activation>
+        <property>
+          <name>scala.version</name>
+          <value>2.8.1.RC1</value>
+        </property>
+      </activation>
+      <repositories>
+        <repository>
+          <id>scala-refactoring-2.8.1.RC1</id>
+          <name>Scala Refactoring Scala 2.8.1.RC1 p2 repository</name>
+          <layout>p2</layout>
+          <url>http://download.scala-ide.org/scala-refactoring-2.8.1.RC1</url>
+          <snapshots><enabled>false</enabled></snapshots>
+        </repository>
+        <repository>
+          <id>scalariform-2.8.1.RC1</id>
+          <name>Scalariform Scala 2.8.1.RC1 p2 repo</name>
+          <layout>p2</layout>
+          <url>http://download.scala-ide.org/scalariform-2.8.1.RC1</url>
+        </repository>
+        <repository>
+          <id>scala-toolchain-2.8.1.RC1</id>
+          <name>Scala Toolchain 2.8.1.final p2 repository</name>
+          <layout>p2</layout>
+          <url>http://download.scala-ide.org/scala-eclipse-toolchain-osgi-2.8.1.RC1</url>
+        </repository>
+      </repositories>
+    </profile>
+    <profile>
       <id>scala-2.8.0-maintenance</id>
       <repositories>
         <repository>
