refactor completion out of core JDT land

--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -855,4 +855,16 @@
       <partition type="__dftl_partition_content_type"/>
    </javaCompletionProposalComputer>
  </extension>
+ <extension
+       id="scala.tools.eclipse.completion.ScalaCompletionProposalComputer"
+       name="Scala Completion Proposal Computer"
+       point="org.eclipse.jdt.ui.javaCompletionProposalComputer">
+    <javaCompletionProposalComputer
+          categoryId="org.eclipse.jdt.ui.javaAllProposalCategory"
+          class="scala.tools.eclipse.completion.ScalaCompletionProposalComputer">
+       <partition
+             type="__dftl_partition_content_type">
+       </partition>
+    </javaCompletionProposalComputer>
+ </extension>
 </plugin>
