--- a/org.scala-ide.build/pom.xml
+++ b/org.scala-ide.build/pom.xml
@@ -171,6 +171,66 @@
       </repositories>
     </profile>
     <profile>
+      <id>scala-2.8.1</id>
+      <activation>
+        <property>
+          <name>scala.version</name>
+          <value>2.8.1</value>
+        </property>
+      </activation>
+      <repositories>
+        <repository>
+          <id>scala-refactoring-2.8.1.final</id>
+          <name>Scala Refactoring Scala 2.8.1.final p2 repository</name>
+          <layout>p2</layout>
+          <url>http://download.scala-ide.org/scala-refactoring-2.8.1.final</url>
+          <snapshots><enabled>false</enabled></snapshots>
+        </repository>
+        <repository>
+          <id>scalariform-2.8.1.final</id>
+          <name>Scalariform Scala 2.8.1.final p2 repo</name>
+          <layout>p2</layout>
+          <url>http://download.scala-ide.org/scalariform-2.8.1.final</url>
+        </repository>
+        <repository>
+          <id>scala-toolchain-2.8.1.final</id>
+          <name>Scala Toolchain 2.8.1.final p2 repository</name>
+          <layout>p2</layout>
+          <url>http://download.scala-ide.org/scala-eclipse-toolchain-osgi-2.8.1.final</url>
+        </repository>
+      </repositories>
+    </profile>
+    <profile>
+      <id>scala-2.8.1.RC2</id>
+      <activation>
+        <property>
+          <name>scala.version</name>
+          <value>2.8.1.RC2</value>
+        </property>
+      </activation>
+      <repositories>
+        <repository>
+          <id>scala-refactoring-2.8.1.RC2</id>
+          <name>Scala Refactoring Scala 2.8.1.RC2 p2 repository</name>
+          <layout>p2</layout>
+          <url>http://download.scala-ide.org/scala-refactoring-2.8.1.RC2</url>
+          <snapshots><enabled>false</enabled></snapshots>
+        </repository>
+        <repository>
+          <id>scalariform-2.8.1.RC2</id>
+          <name>Scalariform Scala 2.8.1.RC2 p2 repo</name>
+          <layout>p2</layout>
+          <url>http://download.scala-ide.org/scalariform-2.8.1.RC2</url>
+        </repository>
+        <repository>
+          <id>scala-toolchain-2.8.1.RC2</id>
+          <name>Scala Toolchain 2.8.1.RC2 p2 repository</name>
+          <layout>p2</layout>
+          <url>http://download.scala-ide.org/scala-eclipse-toolchain-osgi-2.8.1.RC2</url>
+        </repository>
+      </repositories>
+    </profile>
+    <profile>
       <id>scala-2.8.0-maintenance</id>
       <repositories>
         <repository>
@@ -195,7 +255,7 @@
       </repositories>
     </profile>
     <profile>
-      <id>scala-2.8.1</id>
+      <id>scala-2.8.x</id>
       <activation>
         <property>
           <name>scala.version</name>
@@ -331,7 +391,8 @@
           <id>scala-refactoring-trunk</id>
           <name>Scala Refactoring Scala trunk p2 repository</name>
           <layout>p2</layout>
-          <url>http://download.scala-ide.org/scala-refactoring-trunk</url>
+<!--          <url>http://download.scala-ide.org/scala-refactoring-trunk</url> -->
+          <url>http://scala.ifs.hsr.ch/hudson/job/Scala-Refactoring-2.9.0-SNAPSHOT/ws/org.scala-refactoring.update-site/target/site/repo/</url>
           <snapshots><enabled>false</enabled></snapshots>
         </repository>
         <repository>
