--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -553,6 +553,15 @@
      </initializer>
   </extension>
 
+  <extension point="org.eclipse.core.expressions.propertyTesters">
+     <propertyTester
+           class="scala.tools.eclipse.launching.ScalaLaunchableTester"
+           id="scala.tools.eclipse.launching.ScalaLaunchableTester"
+           namespace="scala.tools.eclipse.launching"
+           properties="hasMain"
+           type="org.eclipse.core.runtime.IAdaptable"/>            
+  </extension>
+
   <extension point="org.eclipse.debug.ui.launchShortcuts">
     <shortcut
       class="scala.tools.eclipse.launching.ScalaLaunchShortcut"
@@ -565,7 +574,10 @@
           <with variable="selection">
             <count value="1" />
             <iterate>
-              <test property="org.eclipse.debug.ui.matchesPattern" value="*.scala"/>
+              <and>
+                <test property="org.eclipse.debug.ui.matchesPattern" value="*.scala"/>
+                <test property="scala.tools.eclipse.launching.hasMain"/>
+              </and>
             </iterate>
           </with>
         </enablement>
