backport scala interactive to work with scala 2.8.0 (include a copy of ...nsc.interactive and ignore the one provide by scala-compiler-x.y.z.jar)
Signed-off-by: David Bernard <david.bernard.31@gmail.com>

--- a/org.scala-ide.scala.compiler/pom.xml
+++ b/org.scala-ide.scala.compiler/pom.xml
@@ -128,6 +128,7 @@
             <Embed-StripVersion>true</Embed-StripVersion>
             <Include-Resource>lib=${project.build.directory}/lib</Include-Resource>
             <Import-Package>!jline,!sun.misc,!scala.tools.nsc.interactive,*</Import-Package>
+            <Eclipse-ExtensibleAPI>true</Eclipse-ExtensibleAPI>
           </instructions>
         </configuration>
       </plugin>
