--- a/org.scala-ide.build-toolchain/pom.xml
+++ b/org.scala-ide.build-toolchain/pom.xml
@@ -4,13 +4,13 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.scala-ide</groupId>
   <artifactId>scala-toolchain-for-eclipse</artifactId>
-  <version>2.9.0-SNAPSHOT</version>
+  <version>2.8.0</version>
   <name>The Scala Toolchain for Eclipse</name>
   <packaging>pom</packaging>
 
   <properties>
     <scala.version>2.8.0</scala.version>
-    <patch.level>p0002</patch.level>
+    <patch.level>p0003</patch.level>
     <encoding>UTF-8</encoding>
   </properties>
 
