--- a/org.scala-ide.scala.compiler/pom.xml
+++ b/org.scala-ide.scala.compiler/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.scala-ide</groupId>
     <artifactId>scala-toolchain-for-eclipse</artifactId>
-    <version>2.9.0-SNAPSHOT</version>
+    <version>2.8.0</version>
     <relativePath>../org.scala-ide.build-toolchain/pom.xml</relativePath>
   </parent>
   <artifactId>org.scala-ide.scala.compiler</artifactId>
@@ -123,11 +123,11 @@
             <Bundle-Name>Scala Compiler for Eclipse</Bundle-Name>
             <Bundle-Version>${version.number}${maintenance.suffix}-${patch.level}</Bundle-Version>
             <Embed-Dependency>*;scope=compile|runtime;inline=false</Embed-Dependency>
-            <_exportcontents>scala.tools.*;version=${version.number},ch.epfl.lamp.*;version=${version.number}</_exportcontents>
+            <_exportcontents>!scala.tools.nsc.interactive.*,scala.tools.*;version=${version.number},ch.epfl.lamp.*;version=${version.number}</_exportcontents>
             <Embed-Directory>lib</Embed-Directory>
             <Embed-StripVersion>true</Embed-StripVersion>
             <Include-Resource>lib=${project.build.directory}/lib</Include-Resource>
-            <Import-Package>!jline,!sun.misc,*</Import-Package>
+            <Import-Package>!jline,!sun.misc,!scala.tools.nsc.interactive,*</Import-Package>
           </instructions>
         </configuration>
       </plugin>
