--- a/org.scala-ide.build-toolchain/pom.xml
+++ b/org.scala-ide.build-toolchain/pom.xml
@@ -12,6 +12,7 @@
     <scala.version>2.8.0</scala.version>
     <patch.level>p0003</patch.level>
     <encoding>UTF-8</encoding>
+    <maven.test.skip>true</maven.test.skip>
   </properties>
 
   <modules>
